docs-archive/apache-airflow-providers-amazon/9.22.0/_sources/_api/airflow/providers/amazon/aws/operators/emr/index.rst.txt
airflow.providers.amazon.aws.operators.emr
==========================================

.. py:module:: airflow.providers.amazon.aws.operators.emr


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.emr.EmrAddStepsOperator
   airflow.providers.amazon.aws.operators.emr.EmrStartNotebookExecutionOperator
   airflow.providers.amazon.aws.operators.emr.EmrStopNotebookExecutionOperator
   airflow.providers.amazon.aws.operators.emr.EmrEksCreateClusterOperator
   airflow.providers.amazon.aws.operators.emr.EmrContainerOperator
   airflow.providers.amazon.aws.operators.emr.EmrCreateJobFlowOperator
   airflow.providers.amazon.aws.operators.emr.EmrModifyClusterOperator
   airflow.providers.amazon.aws.operators.emr.EmrTerminateJobFlowOperator
   airflow.providers.amazon.aws.operators.emr.EmrServerlessCreateApplicationOperator
   airflow.providers.amazon.aws.operators.emr.EmrServerlessStartJobOperator
   airflow.providers.amazon.aws.operators.emr.EmrServerlessStopApplicationOperator
   airflow.providers.amazon.aws.operators.emr.EmrServerlessDeleteApplicationOperator


Module Contents
---------------

.. py:class:: EmrAddStepsOperator(*, job_flow_id = None, job_flow_name = None, cluster_states = None, steps = None, wait_for_completion = False, waiter_delay = 30, waiter_max_attempts = 60, execution_role_arn = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrHook`\ ]


   An operator that adds steps to an existing EMR job_flow.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrAddStepsOperator`

   :param job_flow_id: id of the JobFlow to add steps to. (templated)
   :param job_flow_name: name of the JobFlow to add steps to. Use as an alternative to passing
       job_flow_id. will search for id of JobFlow with matching name in one of the states in
       param cluster_states. Exactly one cluster like this should exist or will fail. (templated)
   :param cluster_states: Acceptable cluster states when searching for JobFlow id by job_flow_name.
       (templated)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param steps: boto3 style steps or reference to a steps file (must be '.json') to
       be added to the jobflow. (templated)
   :param wait_for_completion: If True, the operator will wait for all the steps to be completed.
       Defaults to False. Note: When deferrable=True, this parameter will not take effect.
   :param execution_role_arn: The ARN of the runtime role for a step on the cluster.
   :param do_xcom_push: if True, job_flow_id is pushed to XCom with key job_flow_id.
   :param deferrable: If True, the operator will wait asynchronously for the job to complete.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False)


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.json',)



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#f9c915'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: job_flow_id
      :value: None



   .. py:attribute:: job_flow_name
      :value: None



   .. py:attribute:: cluster_states
      :value: []



   .. py:attribute:: steps
      :value: []



   .. py:attribute:: wait_for_completion
      :value: False



   .. py:attribute:: waiter_delay
      :value: 30



   .. py:attribute:: waiter_max_attempts
      :value: 60



   .. py:attribute:: execution_role_arn
      :value: None



   .. py:attribute:: deferrable


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


.. py:class:: EmrStartNotebookExecutionOperator(editor_id, relative_path, cluster_id, service_role, notebook_execution_name = None, notebook_params = None, notebook_instance_security_group_id = None, master_instance_security_group_id = None, tags = None, wait_for_completion = False, waiter_max_attempts = None, waiter_delay = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrHook`\ ]


   An operator that starts an EMR notebook execution.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrStartNotebookExecutionOperator`

   :param editor_id: The unique identifier of the EMR notebook to use for notebook execution.
   :param relative_path: The path and file name of the notebook file for this execution,
       relative to the path specified for the EMR notebook.
   :param cluster_id: The unique identifier of the EMR cluster the notebook is attached to.
   :param service_role: The name or ARN of the IAM role that is used as the service role
       for Amazon EMR (the EMR role) for the notebook execution.
   :param notebook_execution_name: Optional name for the notebook execution.
   :param notebook_params: Input parameters in JSON format passed to the EMR notebook at
       runtime for execution.
   :param notebook_instance_security_group_id: The unique identifier of the Amazon EC2
       security group to associate with the EMR notebook for this notebook execution.
   :param master_instance_security_group_id: Optional unique ID of an EC2 security
       group to associate with the master instance of the EMR cluster for this notebook execution.
   :param tags: Optional list of key value pair to associate with the notebook execution.
   :param waiter_max_attempts: Maximum number of tries before failing.
   :param waiter_delay: Number of seconds between polling the state of the notebook.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: editor_id


   .. py:attribute:: relative_path


   .. py:attribute:: service_role


   .. py:attribute:: notebook_execution_name
      :value: 'emr_notebook_Instance of uuid.UUID'



   .. py:attribute:: notebook_params
      :value: ''



   .. py:attribute:: notebook_instance_security_group_id
      :value: ''



   .. py:attribute:: tags
      :value: []



   .. py:attribute:: wait_for_completion
      :value: False



   .. py:attribute:: cluster_id


   .. py:attribute:: waiter_max_attempts
      :value: 25



   .. py:attribute:: waiter_delay
      :value: 60



   .. py:attribute:: master_instance_security_group_id
      :value: None



   .. py:method:: execute(context)


.. py:class:: EmrStopNotebookExecutionOperator(notebook_execution_id, wait_for_completion = False, waiter_max_attempts = None, waiter_delay = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrHook`\ ]


   An operator that stops a running EMR notebook execution.

    .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrStopNotebookExecutionOperator`

   :param notebook_execution_id: The unique identifier of the notebook execution.
   :param wait_for_completion: If True, the operator will wait for the notebook.
       to be in a STOPPED or FINISHED state. Defaults to False.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param waiter_max_attempts: Maximum number of tries before failing.
   :param waiter_delay: Number of seconds between polling the state of the notebook.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: notebook_execution_id


   .. py:attribute:: wait_for_completion
      :value: False



   .. py:attribute:: waiter_max_attempts
      :value: 25



   .. py:attribute:: waiter_delay
      :value: 60



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: EmrEksCreateClusterOperator(*, virtual_cluster_name, eks_cluster_name, eks_namespace, virtual_cluster_id = '', tags = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrContainerHook`\ ]


   An operator that creates EMR on EKS virtual clusters.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrEksCreateClusterOperator`

   :param virtual_cluster_name: The name of the EMR EKS virtual cluster to create.
   :param eks_cluster_name: The EKS cluster used by the EMR virtual cluster.
   :param eks_namespace: namespace used by the EKS cluster.
   :param virtual_cluster_id: The EMR on EKS virtual cluster id.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param tags: The tags assigned to created cluster.
       Defaults to None


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: ui_color
      :value: '#f9c915'



   .. py:attribute:: virtual_cluster_name


   .. py:attribute:: eks_cluster_name


   .. py:attribute:: eks_namespace


   .. py:attribute:: virtual_cluster_id
      :value: ''



   .. py:attribute:: tags
      :value: None



   .. py:method:: execute(context)

      Create EMR on EKS virtual Cluster.



.. py:class:: EmrContainerOperator(*, name, virtual_cluster_id, execution_role_arn, release_label, job_driver, configuration_overrides = None, client_request_token = None, wait_for_completion = True, poll_interval = 30, tags = None, max_polling_attempts = None, job_retry_max_attempts = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrContainerHook`\ ]


   An operator that submits jobs to EMR on EKS virtual clusters.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrContainerOperator`

   :param name: The name of the job run.
   :param virtual_cluster_id: The EMR on EKS virtual cluster ID
   :param execution_role_arn: The IAM role ARN associated with the job run.
   :param release_label: The Amazon EMR release version to use for the job run.
   :param job_driver: Job configuration details, e.g. the Spark job parameters.
   :param configuration_overrides: The configuration overrides for the job run,
       specifically either application configuration or monitoring configuration.
   :param client_request_token: The client idempotency token of the job run request.
       Use this if you want to specify a unique ID to prevent two jobs from getting started.
       If no token is provided, a UUIDv4 token will be generated for you.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param wait_for_completion: Whether or not to wait in the operator for the job to complete.
   :param poll_interval: Time (in seconds) to wait between two consecutive calls to check query status on EMR
   :param max_polling_attempts: Maximum number of times to wait for the job run to finish.
       Defaults to None, which will poll until the job is *not* in a pending, submitted, or running state.
   :param job_retry_max_attempts: Maximum number of times to retry when the EMR job fails.
       Defaults to None, which disable the retry.
   :param tags: The tags assigned to job runs.
       Defaults to None
   :param deferrable: Run operator in the deferrable mode.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: ui_color
      :value: '#f9c915'



   .. py:attribute:: name


   .. py:attribute:: virtual_cluster_id


   .. py:attribute:: execution_role_arn


   .. py:attribute:: release_label


   .. py:attribute:: job_driver


   .. py:attribute:: configuration_overrides


   .. py:attribute:: client_request_token
      :value: ''



   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: poll_interval
      :value: 30



   .. py:attribute:: max_polling_attempts
      :value: None



   .. py:attribute:: job_retry_max_attempts
      :value: None



   .. py:attribute:: tags
      :value: None



   .. py:attribute:: job_id
      :type:  str | None
      :value: None



   .. py:attribute:: deferrable


   .. py:method:: execute(context)

      Run job on EMR Containers.



   .. py:method:: check_failure(query_status)


   .. py:method:: execute_complete(context, event = None)


   .. py:method:: on_kill()

      Cancel the submitted job run.



.. py:class:: EmrCreateJobFlowOperator(*, emr_conn_id = 'emr_default', job_flow_overrides = None, wait_for_completion = None, wait_policy = None, waiter_max_attempts = None, waiter_delay = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), terminate_job_flow_on_failure = True, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrHook`\ ]


   Creates an EMR JobFlow, reading the config from the EMR connection.

   A dictionary of JobFlow overrides can be passed that override the config from the connection.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrCreateJobFlowOperator`

   :param emr_conn_id: :ref:`Amazon Elastic MapReduce Connection <howto/connection:emr>`.
       Use to receive an initial Amazon EMR cluster configuration:
       ``boto3.client('emr').run_job_flow`` request body.
       If this is None or empty or the connection does not exist,
       then an empty initial configuration is used.
   :param job_flow_overrides: boto3 style arguments or reference to an arguments file
       (must be '.json') to override specific ``emr_conn_id`` extra parameters. (templated)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param wait_for_completion: Whether to finish task immediately after creation (False) or wait for jobflow
       completion (True)
       (default: None)
   :param wait_policy: Whether to finish the task immediately after creation (None) or:
       - wait for the jobflow completion (WaitPolicy.WAIT_FOR_COMPLETION)
       - wait for the jobflow completion and cluster to terminate (WaitPolicy.WAIT_FOR_STEPS_COMPLETION)
       (default: None)
   :param waiter_max_attempts: Maximum number of tries before failing.
   :param waiter_delay: Number of seconds between polling the state of the notebook.
   :param deferrable: If True, the operator will wait asynchronously for the crawl to complete.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False)
   :param terminate_job_flow_on_failure: If True, attempts best-effort termination of the EMR job flow
       when a failure occurs after the job flow has been created. Cleanup failures do not mask the
       original exception. (default: True)


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.json',)



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#f9c915'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: emr_conn_id
      :value: 'emr_default'



   .. py:attribute:: job_flow_overrides


   .. py:attribute:: waiter_max_attempts
      :value: 60



   .. py:attribute:: waiter_delay
      :value: 60



   .. py:attribute:: deferrable


   .. py:attribute:: terminate_job_flow_on_failure
      :value: True



   .. py:attribute:: wait_policy
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


   .. py:method:: on_kill()

      Terminate the EMR cluster (job flow) unless TerminationProtected is enabled on the cluster.



.. py:class:: EmrModifyClusterOperator(*, cluster_id, step_concurrency_level, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrHook`\ ]


   An operator that modifies an existing EMR cluster.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrModifyClusterOperator`

   :param cluster_id: cluster identifier
   :param step_concurrency_level: Concurrency of the cluster
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param do_xcom_push: if True, cluster_id is pushed to XCom with key cluster_id.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ()



   .. py:attribute:: ui_color
      :value: '#f9c915'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: cluster_id


   .. py:attribute:: step_concurrency_level


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: EmrTerminateJobFlowOperator(*, job_flow_id, waiter_delay = 60, waiter_max_attempts = 20, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrHook`\ ]


   Operator to terminate EMR JobFlows.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrTerminateJobFlowOperator`

   :param job_flow_id: id of the JobFlow to terminate. (templated)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param waiter_delay: Time (in seconds) to wait between two consecutive calls to check JobFlow status
   :param waiter_max_attempts: The maximum number of times to poll for JobFlow status.
   :param deferrable: If True, the operator will wait asynchronously for the crawl to complete.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False)


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ()



   .. py:attribute:: ui_color
      :value: '#f9c915'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: job_flow_id


   .. py:attribute:: waiter_delay
      :value: 60



   .. py:attribute:: waiter_max_attempts
      :value: 20



   .. py:attribute:: deferrable


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


.. py:class:: EmrServerlessCreateApplicationOperator(release_label, job_type, client_request_token = '', config = None, wait_for_completion = True, waiter_max_attempts = NOTSET, waiter_delay = NOTSET, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrServerlessHook`\ ]


   Operator to create Serverless EMR Application.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrServerlessCreateApplicationOperator`

   :param release_label: The EMR release version associated with the application.
   :param job_type: The type of application you want to start, such as Spark or Hive.
   :param wait_for_completion: If true, wait for the Application to start before returning. Defaults to True.
       If set to False, ``waiter_max_attempts`` and ``waiter_delay`` will only be applied when
       waiting for the application to be in the ``CREATED`` state.
   :param client_request_token: The client idempotency token of the application to create.
     Its value must be unique for each request.
   :param config: Optional dictionary for arbitrary parameters to the boto API create_application call.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param waiter_max_attempts: Number of times the waiter should poll the application to check the state.
       Defaults to 25 if not set.
   :param waiter_delay: Number of seconds between polling the state of the application.
       Defaults to 60 seconds if not set.
   :param deferrable: If True, the operator will wait asynchronously for application to be created.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False, but can be overridden in config file by setting default_deferrable to True)


   .. py:attribute:: aws_hook_class


   .. py:attribute:: release_label


   .. py:attribute:: job_type


   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: kwargs


   .. py:attribute:: config


   .. py:attribute:: waiter_max_attempts
      :value: 25



   .. py:attribute:: waiter_delay
      :value: 60



   .. py:attribute:: deferrable


   .. py:attribute:: client_request_token
      :value: ''



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: start_application_deferred(context, event = None)


   .. py:method:: execute_complete(context, event = None)


.. py:class:: EmrServerlessStartJobOperator(application_id, execution_role_arn, job_driver, configuration_overrides = None, client_request_token = '', config = None, wait_for_completion = True, name = None, waiter_max_attempts = NOTSET, waiter_delay = NOTSET, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), enable_application_ui_links = False, cancel_on_kill = True, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrServerlessHook`\ ]


   Operator to start EMR Serverless job.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrServerlessStartJobOperator`

   :param application_id: ID of the EMR Serverless application to start.
   :param execution_role_arn: ARN of role to perform action.
   :param job_driver: Driver that the job runs on.
   :param configuration_overrides: Configuration specifications to override existing configurations.
   :param client_request_token: The client idempotency token of the application to create.
     Its value must be unique for each request.
   :param config: Optional dictionary for arbitrary parameters to the boto API start_job_run call.
   :param wait_for_completion: If true, waits for the job to start before returning. Defaults to True.
       If set to False, ``waiter_max_attempts`` and ``waiter_delay`` will only be applied
       when waiting for the application to be in the ``STARTED`` state.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param name: Name for the EMR Serverless job. If not provided, a default name will be assigned.
   :param waiter_max_attempts: Number of times the waiter should poll the application to check the state.
       Defaults to 25 if not set.
   :param waiter_delay: Number of seconds between polling the state of the job run.
       Defaults to 60 seconds if not set.
   :param deferrable: If True, the operator will wait asynchronously for the crawl to complete.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False, but can be overridden in config file by setting default_deferrable to True)
   :param enable_application_ui_links: If True, the operator will generate one-time links to EMR Serverless
       application UIs. The generated links will allow any user with access to the DAG to see the Spark or
       Tez UI or Spark stdout logs. Defaults to False.
   :param cancel_on_kill: If True, the EMR Serverless job will be cancelled when the task is killed
       while in deferrable mode. This ensures that orphan jobs are not left running in EMR Serverless
       when an Airflow task is cancelled. Defaults to True.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: template_fields_renderers


   .. py:attribute:: operator_extra_links


   .. py:attribute:: application_id


   .. py:attribute:: execution_role_arn


   .. py:attribute:: job_driver


   .. py:attribute:: configuration_overrides
      :value: None



   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: config


   .. py:attribute:: name
      :value: None



   .. py:attribute:: waiter_max_attempts
      :value: 25



   .. py:attribute:: waiter_delay
      :value: 60



   .. py:attribute:: job_id
      :type:  str | None
      :value: None



   .. py:attribute:: deferrable


   .. py:attribute:: enable_application_ui_links
      :value: False



   .. py:attribute:: cancel_on_kill
      :value: True



   .. py:attribute:: client_request_token
      :value: ''



   .. py:method:: execute(context, event = None)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


   .. py:method:: on_kill()

      Cancel the submitted job run.

      Note: In deferrable mode, this method will not run. Instead, job cancellation
      is handled by the trigger's cancel_on_kill parameter when the task is killed.



   .. py:method:: is_monitoring_in_job_override(config_key, job_override)

      Check if monitoring is enabled for the job.

      Note: This is not compatible with application defaults:
      https://docs.aws.amazon.com/emr/latest/EMR-Serverless-UserGuide/default-configs.html

      This is used to determine what extra links should be shown.



   .. py:method:: persist_links(context)

      Populate the relevant extra links for the EMR Serverless jobs.



.. py:class:: EmrServerlessStopApplicationOperator(application_id, wait_for_completion = True, waiter_max_attempts = NOTSET, waiter_delay = NOTSET, force_stop = False, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.emr.EmrServerlessHook`\ ]


   Operator to stop an EMR Serverless application.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrServerlessStopApplicationOperator`

   :param application_id: ID of the EMR Serverless application to stop.
   :param wait_for_completion: If true, wait for the Application to stop before returning. Default to True
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param force_stop: If set to True, any job for that app that is not in a terminal state will be cancelled.
       Otherwise, trying to stop an app with running jobs will return an error.
       If you want to wait for the jobs to finish gracefully, use
       :class:`airflow.providers.amazon.aws.sensors.emr.EmrServerlessJobSensor`
   :param waiter_max_attempts: Number of times the waiter should poll the application to check the state.
       Defaults to 25 if not set.
   :param waiter_delay: Number of seconds between polling the state of the application.
       Defaults to 60 seconds if not set.
   :param deferrable: If True, the operator will wait asynchronously for the application to stop.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False, but can be overridden in config file by setting default_deferrable to True)


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: application_id


   .. py:attribute:: wait_for_completion
      :value: False



   .. py:attribute:: waiter_max_attempts
      :value: 25



   .. py:attribute:: waiter_delay
      :value: 60



   .. py:attribute:: force_stop
      :value: False



   .. py:attribute:: deferrable


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: stop_application(context, event = None)


   .. py:method:: execute_complete(context, event = None)


.. py:class:: EmrServerlessDeleteApplicationOperator(application_id, wait_for_completion = True, waiter_max_attempts = NOTSET, waiter_delay = NOTSET, force_stop = False, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`EmrServerlessStopApplicationOperator`


   Operator to delete EMR Serverless application.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:EmrServerlessDeleteApplicationOperator`

   :param application_id: ID of the EMR Serverless application to delete.
   :param wait_for_completion: If true, wait for the Application to be deleted before returning.
       Defaults to True. Note that this operator will always wait for the application to be STOPPED first.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param waiter_max_attempts: Number of times the waiter should poll the application to check the state.
       Defaults to 25 if not set.
   :param waiter_delay: Number of seconds between polling the state of the application.
       Defaults to 60 seconds if not set.
   :param deferrable: If True, the operator will wait asynchronously for application to be deleted.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False, but can be overridden in config file by setting default_deferrable to True)
   :param force_stop: If set to True, any job for that app that is not in a terminal state will be cancelled.
       Otherwise, trying to delete an app with running jobs will return an error.
       If you want to wait for the jobs to finish gracefully, use
       :class:`airflow.providers.amazon.aws.sensors.emr.EmrServerlessJobSensor`


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: wait_for_delete_completion
      :value: True



   .. py:attribute:: deferrable


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


